<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent">
   <ImageView 
       android:id="@+id/backgroundImage"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:src="@drawable/dozuki_workbench"
       android:scaleType="centerCrop"
       android:contentDescription="@string/site_list_background" />
   <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:layout_marginTop="40dp"
       android:layout_marginBottom="40dp"
       android:layout_gravity="center">
	   <ImageView
	       android:id="@+id/dozuki_splash_logo"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:src="@drawable/dozuki_splash_logo"
	       android:scaleType="center"
	       android:layout_gravity="center"
	       android:contentDescription="@string/site_list_image_description" />
	   <com.dozuki.ifixit.dozuki.ui.SiteListOffsetButton
	       android:id="@+id/list_dialog_btn"
	       android:layout_height="wrap_content"
	       android:layout_width="@dimen/site_list_button_width"
	       android:layout_gravity="center"
	       android:layout_marginTop="20dp"
	       android:text="@string/site_list_button"
	       android:textSize="30sp"
	       android:textColor="#454545"
	       android:textStyle="bold"
	       android:background="@drawable/site_button_states" />
   </LinearLayout>
</FrameLayout>
