<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/site_list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@color/background_holo_dark"
        android:text="@string/site_list_title"
        android:paddingTop="16dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="16dp"/>

    <View android:id="@+id/titleDivider"
          android:layout_width="match_parent"
          android:layout_height="2dip"
          android:background="@color/dozuki_red" />

    <com.actionbarsherlock.widget.SearchView
        android:id="@+id/dozuki_search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:icon="@android:drawable/ic_menu_search"
        android:imeOptions="actionSearch"
        android:title="@string/site_list_search_title" />

    <ListView
        android:id="@+id/siteListView"
        style="?attr/listViewStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/emptyView"
        style="@style/text.list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_site_list" />

</LinearLayout>